Fixed mobile footer and added extra margin to form

--- a/css/review_ideas.css
+++ b/css/review_ideas.css
@@ -10,6 +10,10 @@ nav ul.left a {
     color: lightcoral !important;
 }
 
+#form {
+    margin-bottom: 18vh;
+}
+
 .form-subtitle {
     color: #033649 !important;
     text-decoration: underline;
@@ -47,4 +51,10 @@ nav ul.left a {
 .page-footer {
     display: table-row;
     vertical-align: bottom;
+}
+
+@media only screen and (max-width: 550px) {
+    .page-footer {
+        height: 64px !important;
+    }
 }
